--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -28,17 +28,25 @@ pip-tools>=6.7.0
 packaging>=21.3
 
 # for type checking
+django-stubs
+djangorestframework-stubs
 lxml-stubs
 msgpack-types>=0.2.0
 mypy>=1.3.0
 types-beautifulsoup4
 types-cachetools
+types-croniter
 types-freezegun
 types-jsonschema
+types-oauthlib
+types-parsimonious
+types-pillow
+types-protobuf
 types-psycopg2
 types-python-dateutil
 types-pytz
 types-pyyaml
 types-redis
 types-requests
+types-setuptools
 types-simplejson>=3.17.7.2
