--- a/pyproject.toml
+++ b/pyproject.toml
@@ -85,6 +85,56 @@ ignore_missing_imports = true
 
 # python3 -m tools.mypy_helpers.make_stub_ignores
 # begin: missing 3rd party stubs
+# - add .pyi files to fixtures/stubs-for-mypy
+# - or find a 3rd party stub
+[[tool.mypy.overrides]]
+module = [
+    "amqp.*",
+    "boto3.*",
+    "botocore.client.*",
+    "botocore.exceptions.*",
+    "celery.*",
+    "codeowners.*",
+    "confluent_kafka.*",
+    "csp.middleware.*",
+    "cssselect.*",
+    "datadog.*",
+    "django_zero_downtime_migrations.backends.postgres.schema.*",
+    "docker.errors.*",
+    "email_reply_parser.*",
+    "fido2.*",
+    "honcho.manager.*",
+    "honcho.printer.*",
+    "isodate.*",
+    "kombu.*",
+    "mistune.*",
+    "mmh3.*",
+    "onelogin.saml2.auth.*",
+    "onelogin.saml2.constants.*",
+    "onelogin.saml2.idp_metadata_parser.*",
+    "openapi_core.*",
+    "petname.*",
+    "phabricator.*",
+    "phonenumbers.*",
+    "progressbar.*",
+    "pytest_benchmark.*",
+    "pytest_rerunfailures.*",
+    "rapidjson.*",
+    "rb.*",
+    "rediscluster.*",
+    "requests_oauthlib.*",
+    "sentry_relay.*",
+    "sqlparse.*",
+    "statsd.*",
+    "symbolic.*",
+    "toronado.*",
+    "u2flib_server.model.*",
+    "ua_parser.user_agent_parser.*",
+    "unidiff.*",
+    "uwsgi.*",
+    "uwsgidecorators.*",
+]
+ignore_missing_imports = true
 # end: missing 3rd party stubs
 
 # python3 -m tools.mypy_helpers.make_module_ignores
