consumers are registered by group, option to create topics

--- a/mypy.ini
+++ b/mypy.ini
@@ -46,6 +46,7 @@ files = fixtures/stubs-for-mypy,
         src/sentry/auth/system.py,
         src/sentry/auth/view.py,
         src/sentry/constants.py,
+        src/sentry/consumers/,
         src/sentry/db/models/base.py,
         src/sentry/db/models/fields/bounded.py,
         src/sentry/db/models/fields/foreignkey.py,
