ref: bump mypy to 1.3.0

--- a/mypy.ini
+++ b/mypy.ini
@@ -241,6 +241,8 @@ ignore_missing_imports = True
 [mypy-django.*]
 ignore_missing_imports = True
 [mypy-docker.*]
+# XXX: our local docker/ folder now shadows docker-py
+follow_imports = skip
 ignore_missing_imports = True
 [mypy-google.*]
 ignore_missing_imports = True
