--- a/config/tsconfig.ci.json
+++ b/config/tsconfig.ci.json
@@ -1,5 +1,8 @@
 {
   "$schema": "http://json.schemastore.org/tsconfig",
   "extends": "./tsconfig.base.json",
+  "compilerOptions": {
+    "sourceMap": false
+  },
   "include": ["../static/app", "../tests/js", "../fixtures/js-stubs"]
 }
