--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "extends": "./config/tsconfig.base.json",
   "compilerOptions": {
-    "allowJs": true
+    "allowJs": true,
+    "sourceMap": false
   },
   "include": ["static/app", "tests/js", "fixtures/js-stubs", "config", "scripts"]
 }
