--- a/pyproject.toml
+++ b/pyproject.toml
@@ -990,7 +990,7 @@ module = [
     "sentry.monitors.endpoints.organization_monitor_checkin_attachment",
     "sentry.monitors.endpoints.organization_monitor_details",
     "sentry.monitors.endpoints.organization_monitor_stats",
-    "sentry.monitors.endpoints.organization_monitors",
+    "sentry.monitors.endpoints.organization_monitor_index",
     "sentry.monitors.models",
     "sentry.monitors.utils",
     "sentry.monitors.validators",
