chore(crons): Rename organization_monitors -> organization_monitor_index (#50585)
Co-authored-by: getsantry[bot] <66042841+getsantry[bot]@users.noreply.github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -989,8 +989,8 @@ module = [
     "sentry.monitors.endpoints.monitor_ingest_checkin_index",
     "sentry.monitors.endpoints.organization_monitor_checkin_attachment",
     "sentry.monitors.endpoints.organization_monitor_details",
+    "sentry.monitors.endpoints.organization_monitor_index",
     "sentry.monitors.endpoints.organization_monitor_stats",
-    "sentry.monitors.endpoints.organization_monitors",
     "sentry.monitors.models",
     "sentry.monitors.utils",
     "sentry.monitors.validators",
