docs(api): Update openapi-examples-validator to use 5.0.0

--- a/api-docs/paths/releases/organization-releases.json
+++ b/api-docs/paths/releases/organization-releases.json
@@ -31,7 +31,8 @@
               "type": "array",
               "items": {
                 "$ref": "../../components/schemas/releases/organization-release.json#/OrganizationRelease"
-              }
+              },
+              "minItems": 2
             },
             "example": [
               {
