--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@types/crypto-js": "^4.1.1",
     "@types/diff": "5.0.2",
     "@types/dompurify": "^2.4.0",
+    "@types/invariant": "^2.2.35",
     "@types/jest": "^29.4.0",
     "@types/js-beautify": "^1.13.3",
     "@types/js-cookie": "^3.0.2",
@@ -108,6 +109,7 @@
     "gettext-parser": "1.3.1",
     "gl-matrix": "^3.4.3",
     "intersection-observer": "^0.12.2",
+    "invariant": "^2.2.4",
     "ios-device-list": "1.1.37",
     "jed": "^1.1.0",
     "js-beautify": "^1.14.4",
