--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -88,6 +88,12 @@ jobs:
           # https://github.com/codecov/codecov-bash/blob/7100762afbc822b91806a6574658129fe0d23a7d/codecov#L891
           fetch-depth: '2'
 
+      - name: Update environment for silo databases
+        if: |
+          contains( github.event.pull_request.labels.*.name, 'Trigger: Silo db' )
+        run: |
+          echo '::set-env name=SENTRY_USE_SILOS=1'
+
       - name: Setup sentry env
         uses: ./.github/actions/setup-sentry
         id: setup
@@ -128,6 +134,13 @@ jobs:
           # https://github.com/codecov/codecov-bash/blob/7100762afbc822b91806a6574658129fe0d23a7d/codecov#L891
           fetch-depth: '2'
 
+      - name: Update environment for silo databases
+        id: silo_env
+        if: |
+          contains( github.event.pull_request.labels.*.name, 'Trigger: Silo db' )
+        run: |
+          echo '::set-env name=SENTRY_USE_SILOS=1'
+
       - name: Setup sentry env
         uses: ./.github/actions/setup-sentry
         id: setup
@@ -158,6 +171,12 @@ jobs:
         pg-version: ['14']
     steps:
       - uses: actions/checkout@93ea575cb5d8a053eaa0ac8fa3b40d7e05a33cc8 # v3.1.0
+
+      - name: Update environment for silo databases
+        if: |
+          contains( github.event.pull_request.labels.*.name, 'Trigger: Silo db' )
+        run: |
+          echo '::set-env name=SENTRY_USE_SILOS=1'
 
       - name: Setup sentry env
         uses: ./.github/actions/setup-sentry
@@ -312,6 +331,12 @@ jobs:
     steps:
       - uses: actions/checkout@93ea575cb5d8a053eaa0ac8fa3b40d7e05a33cc8 # v3.1.0
 
+      - name: Update environment for silo databases
+        if: |
+          contains( github.event.pull_request.labels.*.name, 'Trigger: Silo db' )
+        run: |
+          echo '::set-env name=SENTRY_USE_SILOS=1'
+
       - name: Setup sentry env
         uses: ./.github/actions/setup-sentry
         id: setup
@@ -383,6 +408,12 @@ jobs:
           # Avoid codecov error message related to SHA resolution:
           # https://github.com/codecov/codecov-bash/blob/7100762afbc822b91806a6574658129fe0d23a7d/codecov#L891
           fetch-depth: '2'
+
+      - name: Update environment for silo databases
+        if: |
+          contains( github.event.pull_request.labels.*.name, 'Trigger: Silo db' )
+        run: |
+          echo '::set-env name=SENTRY_USE_SILOS=1'
 
       - name: Setup sentry env
         uses: ./.github/actions/setup-sentry
