--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -15,6 +15,8 @@ concurrency:
 # hack for https://github.com/actions/cache/issues/810#issuecomment-1222550359
 env:
   SEGMENT_DOWNLOAD_TIMEOUT_MINS: 3
+  # Testing this behavior our before adding label based workflows.
+  SENTRY_USE_SILOS: 1
 
 jobs:
   files-changed:
