--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -208,7 +208,7 @@ jobs:
 
   # This check runs once all dependant jobs have passed
   # It symbolizes that all required Frontend checks have succesfully passed (Or skipped)
-  # This check is the only required Github check
+  # This check is the only required GitHub check
   frontend-required-check:
     needs: [files-changed, frontend-jest-tests, typescript-and-lint]
     name: Frontend
