--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "@sentry-internal/rrweb-player": "1.108.0",
     "@sentry/integrations": "^7.57.0-beta.0",
     "@sentry/node": "^7.57.0-beta.0",
-    "@sentry/profiling-node": "^1.0.0",
+    "@sentry/profiling-node": "^1.0.6",
     "@sentry/react": "^7.57.0-beta.0",
     "@sentry/release-parser": "^1.3.1",
     "@sentry/tracing": "^7.57.0-beta.0",
@@ -205,7 +205,12 @@
     "fsevents": "^2.3.2"
   },
   "resolutions": {
-    "**/ua-parser-js": "<=0.7.28"
+    "**/ua-parser-js": "<=0.7.28",
+    "**/@sentry/node": "^7.57.0-beta.0",
+    "**/@sentry/hub": "^7.57.0-beta.0",
+    "**/@sentry/core": "^7.57.0-beta.0",
+    "**/@sentry/types": "^7.57.0-beta.0",
+    "**/@sentry/utils": "^7.57.0-beta.0"
   },
   "APIMethod": "stub",
   "proxyURL": "http://localhost:8000",
