--- a/pyproject.toml
+++ b/pyproject.toml
@@ -188,6 +188,7 @@ module = [
     "sentry.api.endpoints.data_scrubbing_selector_suggestions",
     "sentry.api.endpoints.event_ai_suggested_fix",
     "sentry.api.endpoints.event_apple_crash_report",
+    "sentry.api.endpoints.event_attachment_details",
     "sentry.api.endpoints.event_attachments",
     "sentry.api.endpoints.event_file_committers",
     "sentry.api.endpoints.event_grouping_info",
