fix: Make remove_unneeded_type_ignores work under MacOS, and add it to CI
If we run remove_unneeded_type_ignores before make_module_ignores, we
can potentially remove even more files from pyproject.toml

Currently if nobody runs remove_unneeded_type_ignores, files might stay
in pyproject.toml even though the only errors are about unneeded
type:ignore

--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -479,6 +479,7 @@ jobs:
 
       # only if `backend-typing` succeeds should we try and trim the blocklist
       - run: |
+          python3 -m tools.mypy_helpers.remove_unneeded_type_ignores
           python3 -m tools.mypy_helpers.make_module_ignores
           git diff --exit-code
 
