fix(typing): type serialize function as Mapping

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -385,10 +385,6 @@ module = [
     "sentry.api.serializers.models.notification_setting",
     "sentry.api.serializers.models.organization",
     "sentry.api.serializers.models.organization_member.base",
-    "sentry.api.serializers.models.organization_member.expand.projects",
-    "sentry.api.serializers.models.organization_member.expand.roles",
-    "sentry.api.serializers.models.organization_member.expand.teams",
-    "sentry.api.serializers.models.organization_member.scim",
     "sentry.api.serializers.models.plugin",
     "sentry.api.serializers.models.project",
     "sentry.api.serializers.models.projectcodeowners",
@@ -399,7 +395,6 @@ module = [
     "sentry.api.serializers.models.sentry_app",
     "sentry.api.serializers.models.tagvalue",
     "sentry.api.serializers.models.team",
-    "sentry.api.serializers.models.user",
     "sentry.api.serializers.models.user_identity_config",
     "sentry.api.serializers.rest_framework.commit",
     "sentry.api.serializers.rest_framework.dashboard",
@@ -828,6 +823,7 @@ module = [
     "sentry.plugins.sentry_useragents.models",
     "sentry.plugins.sentry_webhooks.plugin",
     "sentry.plugins.validators.url",
+    "sentry.profiles.flamegraph",
     "sentry.profiles.task",
     "sentry.profiles.utils",
     "sentry.projectoptions.defaults",
