--- a/pyproject.toml
+++ b/pyproject.toml
@@ -395,6 +395,7 @@ module = [
     "sentry.api.serializers.models.sentry_app",
     "sentry.api.serializers.models.tagvalue",
     "sentry.api.serializers.models.team",
+    "sentry.api.serializers.models.user",
     "sentry.api.serializers.models.user_identity_config",
     "sentry.api.serializers.rest_framework.commit",
     "sentry.api.serializers.rest_framework.dashboard",
