ignore type-checking imports in coverage reports

--- a/setup.cfg
+++ b/setup.cfg
@@ -113,3 +113,13 @@ python-tag = py38
 omit =
     src/sentry/migrations/*
 source = .
+
+[coverage:report]
+exclude_lines =
+    # Once we upgrade to coverage >= 7.2, we can switch to using `exclude_also` and
+    # remove `"pragma: no cover"`. See https://coverage.readthedocs.io/en/latest/config.html#report-exclude-also.
+    "pragma: no cover",
+
+    # This may at some point get added to the defaults, in which case we can remove it
+    # from our config. See https://github.com/nedbat/coveragepy/issues/831.
+    "if TYPE_CHECKING:",
