--- a/pyproject.toml
+++ b/pyproject.toml
@@ -154,7 +154,7 @@ module = [
     "sentry.api.bases.group",
     "sentry.api.bases.incident",
     "sentry.api.bases.integration",
-    "sentry.api.bases.organization",
+#    "sentry.api.bases.organization",
     "sentry.api.bases.organization_events",
     "sentry.api.bases.organization_integrations",
     "sentry.api.bases.organization_request_change",
