--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -15,8 +15,6 @@ concurrency:
 # hack for https://github.com/actions/cache/issues/810#issuecomment-1222550359
 env:
   SEGMENT_DOWNLOAD_TIMEOUT_MINS: 3
-  # Testing this behavior our before adding label based workflows.
-  SENTRY_USE_SPLIT_DBS: 1
 
 jobs:
   files-changed:
@@ -69,7 +67,7 @@ jobs:
     needs: files-changed
     name: backend test
     runs-on: ubuntu-20.04
-    # timeout-minutes: 40
+    timeout-minutes: 40
     strategy:
       # This helps not having to run multiple jobs because one fails, thus, reducing resource usage
       # and reducing the risk that one of many runs would turn red again (read: intermittent tests)
