feat: colima replaces docker desktop

--- a/.envrc
+++ b/.envrc
@@ -169,6 +169,7 @@ fi
 
 for pkg in \
     make \
+    colima \
     docker \
     chromedriver \
     pkg-config \
@@ -223,8 +224,6 @@ if ! require pre-commit; then
     warn "Looks like you don't have pre-commit installed."
     commands_to_run+=("make setup-git")
 fi
-
-python3 -m tools.docker_memory_check
 
 ### Node ###
 
