Add new Trigger label

--- a/.github/labels.yml
+++ b/.github/labels.yml
@@ -15,6 +15,9 @@
 - name: 'Trigger: Revert'
   color: 'A0CABD'
   description: 'add to a merged PR to revert it (skips CI)'
+- name: 'Trigger: Silo db'
+  color: 'A0CABD'
+  description: 'Trigger tests with split databases that simulate hybrid cloud data separation in postgres'
 - name: 'Trigger: Visual Snapshot'
   color: 'A0CABD'
   description: 'add to a PR to run a visual snapshot diff'
