--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1131,7 +1131,6 @@ module = [
     "tests.sentry.api.endpoints.test_organization_details",
     "tests.sentry.api.endpoints.test_organization_index",
     "tests.sentry.api.endpoints.test_organization_member_details",
-    "tests.sentry.api.endpoints.test_organization_member_index",
     "tests.sentry.api.endpoints.test_organization_metric_data",
     "tests.sentry.api.endpoints.test_organization_metric_details",
     "tests.sentry.api.endpoints.test_organization_metric_tag_details",
@@ -1384,6 +1383,7 @@ module = [
     "tests.sentry.models.test_release",
     "tests.sentry.models.test_releasefile",
     "tests.sentry.models.test_sentryapp",
+    "tests.sentry.monitors.endpoints.test_monitor_ingest_checkin_details",
     "tests.sentry.monitors.test_models",
     "tests.sentry.nodestore.bigtable.test_backend",
     "tests.sentry.notifications.notifications.organization_request.test_integration_request",
