ref: rename some modules to avoid no-redef mypy warning (#51855)
it's not clear to me why -- there are other modules like this in the
codebase. I suspect some weird import cycle thing due to `__init__.py`
causes mypy's analysis to give up

even weirder is there were 4 distinct errors that mentioned modules like
this -- but I only needed to fix two of them to make the errors go away?
strange.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -764,7 +764,6 @@ module = [
     "sentry.pipeline.base",
     "sentry.pipeline.views.base",
     "sentry.pipeline.views.nested",
-    "sentry.plugins.base.bindings",
     "sentry.plugins.base.notifier",
     "sentry.plugins.base.urls",
     "sentry.plugins.bases.data_forwarding",
@@ -931,7 +930,7 @@ module = [
     "sentry.tasks.integrations.migrate_repo",
     "sentry.tasks.integrations.slack.find_channel_id_for_rule",
     "sentry.tasks.integrations.slack.link_slack_user_identities",
-    "sentry.tasks.integrations.sync_assignee_outbound",
+    "sentry.tasks.integrations.sync_assignee_outbound_impl",
     "sentry.tasks.integrations.sync_status_inbound",
     "sentry.tasks.integrations.sync_status_outbound",
     "sentry.tasks.integrations.update_comment",
@@ -1557,7 +1556,6 @@ disable_error_code = [
     "list-item",
     "method-assign",
     "misc",
-    "no-redef",
     "operator",
     "override",
     "return",
