--- a/requirements-dev-frozen.txt
+++ b/requirements-dev-frozen.txt
@@ -28,6 +28,7 @@ cfgv==3.3.1
 charset-normalizer==3.0.1
 click==8.0.4
 confluent-kafka==2.1.1
+covdefaults==2.3.0
 coverage==6.3.3
 croniter==1.3.10
 cryptography==39.0.1
