ci: run self-hosted e2e test
This should be here, or else we will be having a hard time tracking which commit breaks self-hosted. Like what happened today.

--- a/.github/workflows/self-hosted.yml
+++ b/.github/workflows/self-hosted.yml
@@ -180,6 +180,19 @@ jobs:
 
           docker manifest push ghcr.io/getsentry/sentry-self-hosted:latest
 
+  self-hosted-end-to-end:
+    needs: [assemble]
+    runs-on: ubuntu-latest
+    if: ${{ (github.ref_name == 'master') }}
+    timeout-minutes: 30
+    steps:
+      - name: Run Sentry self-hosted e2e CI
+        uses: getsentry/self-hosted@master
+        with:
+          project_name: sentry
+          image_url: ghcr.io/getsentry/sentry:${{ github.sha }}
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+
   publish-dockerhub:
     needs: [assemble]
     runs-on: ubuntu-latest
