requirements-frozen only

--- a/devenv/config.ini
+++ b/devenv/config.ini
@@ -1,5 +1,5 @@
-[devenv]
-minimum_version = 1.22.0
+#[devenv]
+#minimum_version = 1.22.0
 
 [uv]
 darwin_arm64 = https://github.com/astral-sh/uv/releases/download/0.7.21/uv-aarch64-apple-darwin.tar.gz
