--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -34,6 +34,8 @@ pyupgrade>=3.19.1
 isort>=5.10.1
 
 # For tools/. To be moved into redistributable dev environments.
+# note: wheel is pulled in by pip-tools
+pip-tools>=7.1.0
 packaging>=21.3
 
 # for type checking
