--- a/pyproject.toml
+++ b/pyproject.toml
@@ -155,6 +155,16 @@ dependencies = [
     "zstandard==0.18.0",
 ]
 
+[project.optional-dependencies]
+getsentry = [
+    "avalara==20.9.0",
+    "iso3166>=2.1.1",
+    "pycountry==17.5.14",
+    "pyvat==1.3.15",
+    "reportlab==4.4.0",
+    "stripe==6.7.0",
+]
+
 [tool.black]
 # File filtering is taken care of in pre-commit.
 line-length = 100
