[skip ci] fix file filters

--- a/.github/file-filters.yml
+++ b/.github/file-filters.yml
@@ -37,6 +37,7 @@ frontend_all: &frontend_all
 # Also used in `getsentry-dispatch.yml` to dispatch backend tests on getsentry
 backend_dependencies: &backend_dependencies
   - 'pyproject.toml'
+  - 'uv.lock'
 
 backend_build_changes: &backend_build_changes
   - '.github/workflows/backend.yml'
