--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -503,6 +503,7 @@ tests/sentry/api/endpoints/test_organization_dashboard_widget_details.py     @ge
 ## End of Telemetry Experience
 
 ## ML & AI
+*autofix*.py                                                @getsentry/machine-learning-ai
 /static/app/components/events/autofix/                      @getsentry/machine-learning-ai
 /src/sentry/seer/                                           @getsentry/machine-learning-ai
 *seerExplorer*.tsx                                          @getsentry/machine-learning-ai
