--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -337,8 +337,8 @@ jobs:
       - uses: getsentry/action-setup-venv@3a832a9604b3e1a4202ae559248f26867b467cc7 # v2.1.1
         with:
           python-version: 3.13.1
-          cache-dependency-path: requirements-dev-frozen.txt
-          install-cmd: uv pip install -r requirements-dev-frozen.txt
+          cache-dependency-path: uv.lock
+          install-cmd: uv sync --frozen
 
       - name: setup sentry (lite)
         run: |
