--- a/.github/workflows/self-hosted.yml
+++ b/.github/workflows/self-hosted.yml
@@ -44,7 +44,7 @@ jobs:
       - uses: getsentry/action-setup-venv@3a832a9604b3e1a4202ae559248f26867b467cc7 # v2.1.1
         with:
           python-version: 3.13.1
-          cache-dependency-path: requirements-dev-frozen.txt
+          cache-dependency-path: uv.lock
           install-cmd: echo
 
       - name: Step configurations
