--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,11 +55,11 @@ dependencies = [
     "grpc-stubs==1.53.0.5",
     "grpcio==1.67.0",
     "grpcio-status==1.67.0",
-    "h11==0.14.0",
+    "h11==0.16.0",
     "h2==4.2.0",
     "hiredis==2.3.2",
     "hpack==4.1.0",
-    "httpcore==1.0.2",
+    "httpcore==1.0.9",
     "httpx==0.25.2",
     "hyperframe==6.1.0",
     "idna==3.7",
@@ -117,13 +117,13 @@ dependencies = [
     "rpds-py==0.20.0",
     "rsa==4.8",
     "s3transfer==0.10.0",
-    "sentry-arroyo==2.25.0",
+    "sentry-arroyo==2.28.0",
     "sentry-forked-email-reply-parser==0.5.12.post1",
-    "sentry-kafka-schemas==1.3.13",
+    "sentry-kafka-schemas==1.3.14",
     "sentry-ophio==1.1.3",
-    "sentry-protos==0.2.1",
+    "sentry-protos==0.3.1",
     "sentry-redis-tools==0.5.0",
-    "sentry-relay==0.9.9",
+    "sentry-relay==0.9.10",
     "sentry-sdk==2.29.1",
     "sentry-usage-accountant==0.0.10",
     "setuptools==70.0.0",
@@ -149,7 +149,7 @@ dependencies = [
     "uritemplate==4.1.1",
     "urllib3==2.2.2",
     "vine==5.1.0",
-    "vroomrs==0.1.6",
+    "vroomrs==0.1.13",
     "wcwidth==0.2.13",
     "xmlsec==1.3.14",
     "zstandard==0.18.0",
@@ -274,6 +274,7 @@ dev = [
     "time-machine>=2.16.0",
     "types-beautifulsoup4>=4.12.0.20250516",
     "types-cachetools>=6.0.0.20250525",
+    "types-docker>=7.1.0.20250705",
     "types-jsonschema>=4.24.0.20250708",
     "types-oauthlib>=3.3.0.20250708",
     "types-parsimonious>=0.10.0.20240331",
