--- a/pyproject.toml
+++ b/pyproject.toml
@@ -151,6 +151,7 @@ dependencies = [
     "vine==5.1.0",
     "vroomrs==0.1.13",
     "wcwidth==0.2.13",
+    "xmlsec==1.3.14",
     "zstandard==0.18.0",
 ]
 
