--- a/pyproject.toml
+++ b/pyproject.toml
@@ -70,7 +70,7 @@ dependencies = [
     "jsonschema==4.20.0",
     "jsonschema-specifications==2023.7.1",
     "kombu==5.5.3",
-    "lxml==5.3.0",
+    "lxml>5.3",
     "maxminddb==2.3.0",
     "milksnake==0.1.6",
     "mistune==2.0.4",
@@ -99,7 +99,7 @@ dependencies = [
     "python-dateutil==2.9.0.post0",
     "python-rapidjson==1.8",
     "python-u2flib-server==5.0.0",
-    "python3-saml==1.15.0",
+    "python3-saml==1.16.0",
     "pyuwsgi==2.0.28.post1",
     "pyvat==1.3.15",
     "pyyaml==6.0.2",
@@ -151,7 +151,7 @@ dependencies = [
     "vine==5.1.0",
     "vroomrs==0.1.13",
     "wcwidth==0.2.13",
-    "xmlsec==1.3.16",
+    "xmlsec>=1.3.16",
     "zstandard==0.18.0",
 ]
 
