--- a/pyproject.toml
+++ b/pyproject.toml
@@ -209,9 +209,11 @@ module = [
     "sentry.dynamic_sampling.rules.combinators.*",
     "sentry.dynamic_sampling.rules.helpers.*",
     "sentry.dynamic_sampling.tasks.helpers.*",
+    "sentry.eventstore.base",
     "sentry.eventstore.processing.*",
     "sentry.eventstore.reprocessing.*",
     "sentry.eventstore.reprocessing.redis",
+    "sentry.eventstore.snuba.backend",
     "sentry.eventstream.*",
     "sentry.eventtypes.error",
     "sentry.feedback.migrations.*",
