--- a/pyproject.toml
+++ b/pyproject.toml
@@ -475,6 +475,7 @@ module = [
     "tests.sentry.deletions.tasks.test_groups",
     "tests.sentry.deletions.test_group",
     "tests.sentry.event_manager.test_event_manager",
+    "tests.sentry.eventstore.snuba.test_backend",
     "tests.sentry.grouping.seer_similarity.test_get_seer_similar_issues",
     "tests.sentry.grouping.seer_similarity.test_seer",
     "tests.sentry.grouping.seer_similarity.test_seer_eligibility",
