--- a/pyproject.toml
+++ b/pyproject.toml
@@ -166,7 +166,7 @@ getsentry = [
 ]
 
 [build-system]
-requires = ["uv_build>=0.7.22,<0.8.0"]
+requires = ["uv_build==0.7.22"]
 build-backend = "uv_build"
 
 [tool.black]
