--- a/pyproject.toml
+++ b/pyproject.toml
@@ -243,60 +243,60 @@ django_settings_module = "sentry.conf.server_mypy"
 
 [dependency-groups]
 dev = [
-    "black>=24.10.0",
-    "covdefaults>=2.3.0",
-    "devservices>=1.2.1",
-    "docker>=7",
-    "ephemeral-port-reserve>=1.1.4",
-    "flake8>=7.3",
+    "black==24.10.0",
+    "covdefaults==2.3.0",
+    "devservices==1.2.1",
+    "docker==7",
+    "ephemeral-port-reserve==1.1.4",
+    "flake8==7.3",
     "flake8-bugbear>=22.10",
-    "flake8-logging>=1.5",
-    "honcho>=2",
-    "isort>=5.10.1",
-    "lxml-stubs>=0.5.1",
-    "msgpack-types>=0.2.0",
-    "mypy>=1.15",
+    "flake8-logging==1.5",
+    "honcho==2",
+    "isort==5.10.1",
+    "lxml-stubs==0.5.1",
+    "msgpack-types==0.2.0",
+    "mypy==1.15",
     "openapi-core==0.18.2",
-    "openapi-pydantic>=0.4.0",
-    "packaging>=21.3",
-    "pip-tools>=7.1.0",
-    "pre-commit>=4.2",
-    "pytest>=8.1",
-    "pytest-cov>=4.0.0",
-    "pytest-django>=4.9.0",
-    "pytest-fail-slow>=0.3.0",
-    "pytest-json-report>=1.5.0",
-    "pytest-rerunfailures>=15",
-    "pytest-sentry>=0.3.0,<0.4.0",
-    "pytest-workaround-12888>=1.0.0",
+    "openapi-pydantic==0.4.0",
+    "packaging>=24",
+    "pip-tools==7.1.0",
+    "pre-commit==4.2",
+    "pytest==8.1",
+    "pytest-cov==4.0.0",
+    "pytest-django==4.9.0",
+    "pytest-fail-slow==0.3.0",
+    "pytest-json-report==1.5.0",
+    "pytest-rerunfailures==15",
+    "pytest-sentry==0.3.0,<0.4.0",
+    "pytest-workaround-12888==1.0.0",
     "pytest-xdist>=3",
-    "pyupgrade>=3.19.1",
-    "responses>=0.23.1",
-    "selenium>=4.16.0",
-    "sentry-cli>=2.16.0",
-    "sentry-covdefaults-disable-branch-coverage>=1.0.2",
-    "sentry-devenv>=1.22",
-    "sentry-forked-django-stubs>=5.2.1.post3",
-    "sentry-forked-djangorestframework-stubs>=3.16.0.post1",
-    "time-machine>=2.16.0",
-    "types-beautifulsoup4>=4.12.0.20250516",
-    "types-cachetools>=6.0.0.20250525",
-    "types-docker>=7.1.0.20250705",
-    "types-jsonschema>=4.24.0.20250708",
-    "types-oauthlib>=3.3.0.20250708",
-    "types-parsimonious>=0.10.0.20240331",
-    "types-pillow>=10.2.0.20240822",
-    "types-protobuf>=6.30.2.20250703",
-    "types-psutil>=7.0.0.20250601",
-    "types-psycopg2>=2.9.21.20250516",
-    "types-python-dateutil>=2.9.0.20250708",
-    "types-pyyaml>=6.0.12.20250516",
+    "pyupgrade==3.19.1",
+    "responses==0.23.1",
+    "selenium==4.16.0",
+    "sentry-cli==2.16.0",
+    "sentry-covdefaults-disable-branch-coverage==1.0.2",
+    "sentry-devenv==1.22",
+    "sentry-forked-django-stubs==5.2.1.post3",
+    "sentry-forked-djangorestframework-stubs==3.16.0.post1",
+    "time-machine==2.16.0",
+    "types-beautifulsoup4==4.12.0.20250516",
+    "types-cachetools==6.0.0.20250525",
+    "types-docker==7.1.0.20250705",
+    "types-jsonschema==4.24.0.20250708",
+    "types-oauthlib==3.3.0.20250708",
+    "types-parsimonious==0.10.0.20240331",
+    "types-pillow==10.2.0.20240822",
+    "types-protobuf==6.30.2.20250703",
+    "types-psutil==7.0.0.20250601",
+    "types-psycopg2==2.9.21.20250516",
+    "types-python-dateutil==2.9.0.20250708",
+    "types-pyyaml==6.0.12.20250516",
     "types-redis<4",
-    "types-requests>=2.32.0.20241016",
-    "types-requests-oauthlib>=2.0.0.20250119",
-    "types-setuptools>=68",
-    "types-simplejson>=3.17.7.2",
-    "types-unidiff>=0.7.0.20240505",
+    "types-requests==2.32.0.20241016",
+    "types-requests-oauthlib==2.0.0.20250119",
+    "types-setuptools==68",
+    "types-simplejson==3.17.7.2",
+    "types-unidiff==0.7.0.20240505",
 ]
 
 # these have py.typed but incorrect types
