--- a/setup.cfg
+++ b/setup.cfg
@@ -31,6 +31,9 @@ zip_safe = False
 where = src
 
 [options.entry_points]
+# we don't use setuptools, but this is required for tools/fast_editable.py for getsentry
+console_scripts =
+    sentry = sentry.__main__:main
 sentry.apps =
     # TODO: This can be removed once the getsentry tests no longer check for this app
     auth_activedirectory = sentry.auth.providers.saml2.activedirectory
