--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -81,7 +81,10 @@ jobs:
         with:
           python-version: 3.13.1
           cache-dependency-path: uv.lock
-          install-cmd: uv sync --frozen --only-dev
+          # note: there is uv sync --only-dev but that only applies to the dev dependency group
+          #       we have to specify dev deps as an extra, otherwise it's very difficult to keep
+          #       getsentry's pyprooject.toml + uv.lock in sync
+          install-cmd: uv sync --extra dev --frozen
       - uses: actions/cache@1bd1e32a3bdc45362d1e726936510720a7c30a57 # v4.2.0
         with:
           path: ~/.cache/pre-commit
