Move release_health module into releases module

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -133,7 +133,7 @@ module = [
     "sentry.net.http",
     "sentry.notifications.notifications.activity.base",
     "sentry.plugins.config",
-    "sentry.release_health.metrics_sessions_v2",
+    "sentry.releases.release_health.metrics_sessions_v2",
     "sentry.search.events.builder.errors",
     "sentry.search.events.builder.metrics",
     "sentry.search.events.datasets.filter_aliases",
@@ -355,8 +355,8 @@ module = [
     "sentry.ratelimits.leaky_bucket",
     "sentry.relay.config.metric_extraction",
     "sentry.relay.types.*",
-    "sentry.release_health.release_monitor.*",
     "sentry.releases.endpoints.release_thresholds.health_checks.*",
+    "sentry.releases.release_health.release_monitor.*",
     "sentry.relocation.api.endpoints.artifacts.*",
     "sentry.relocation.services.relocation_export.*",
     "sentry.replays.consumers.*",
