add github team labels

--- a/.github/labels.yml
+++ b/.github/labels.yml
@@ -360,3 +360,155 @@
 - name: wcgw
   color: 'F6F6F8'
   description: ''
+
+# Github Teams
+- name: 'GitHub Team: alerts-create-issues'
+  color: '8D5494'
+  description: ''
+- name: 'GitHub Team: alerts-notifications'
+  color: '8D5494'
+  description: ''
+- name: 'GitHub Team: app-frontend'
+  color: '8D5494'
+  description: ''
+- name: 'GitHub Team: codecov'
+  color: '8D5494'
+  description: ''
+- name: 'GitHub Team: codecov-merge-ux'
+  color: '8D5494'
+  description: ''
+- name: 'GitHub Team: core-product-foundations'
+  color: '8D5494'
+  description: ''
+- name: 'GitHub Team: crons'
+  color: '8D5494'
+  description: ''
+- name: 'GitHub Team: dashboards'
+  color: '8D5494'
+  description: ''
+- name: 'GitHub Team: data'
+  color: '8D5494'
+  description: ''
+- name: 'GitHub Team: design'
+  color: '8D5494'
+  description: ''
+- name: 'GitHub Team: design-engineering'
+  color: '8D5494'
+  description: ''
+- name: 'GitHub Team: dev-infra'
+  color: '8D5494'
+  description: ''
+- name: 'GitHub Team: ecosystem'
+  color: '8D5494'
+  description: ''
+- name: 'GitHub Team: emerge-tools'
+  color: '8D5494'
+  description: ''
+- name: 'GitHub Team: enterprise'
+  color: '8D5494'
+  description: ''
+- name: 'GitHub Team: explore'
+  color: '8D5494'
+  description: ''
+- name: 'GitHub Team: feedback-backend'
+  color: '8D5494'
+  description: ''
+- name: 'GitHub Team: feedback-frontend'
+  color: '8D5494'
+  description: ''
+- name: 'GitHub Team: gdx'
+  color: '8D5494'
+  description: ''
+- name: 'GitHub Team: hybrid-cloud'
+  color: '8D5494'
+  description: ''
+- name: 'GitHub Team: ingest'
+  color: '8D5494'
+  description: ''
+- name: 'GitHub Team: insights'
+  color: '8D5494'
+  description: ''
+- name: 'GitHub Team: issue-detection-backend'
+  color: '8D5494'
+  description: ''
+- name: 'GitHub Team: issue-detection-frontend'
+  color: '8D5494'
+  description: ''
+- name: 'GitHub Team: issue-workflow'
+  color: '8D5494'
+  description: ''
+- name: 'GitHub Team: machine-learning-ai'
+  color: '8D5494'
+  description: ''
+- name: 'GitHub Team: ops'
+  color: '8D5494'
+  description: ''
+- name: 'GitHub Team: owners-api'
+  color: '8D5494'
+  description: ''
+- name: 'GitHub Team: owners-js-build'
+  color: '8D5494'
+  description: ''
+- name: 'GitHub Team: owners-js-deps'
+  color: '8D5494'
+  description: ''
+- name: 'GitHub Team: owners-legal'
+  color: '8D5494'
+  description: ''
+- name: 'GitHub Team: owners-migrations'
+  color: '8D5494'
+  description: ''
+- name: 'GitHub Team: owners-python-build'
+  color: '8D5494'
+  description: ''
+- name: 'GitHub Team: owners-sentry-dev'
+  color: '8D5494'
+  description: ''
+- name: 'GitHub Team: owners-snuba'
+  color: '8D5494'
+  description: ''
+- name: 'GitHub Team: performance'
+  color: '8D5494'
+  description: ''
+- name: 'GitHub Team: product-owners-settings-integrations'
+  color: '8D5494'
+  description: ''
+- name: 'GitHub Team: profiling'
+  color: '8D5494'
+  description: ''
+- name: 'GitHub Team: python-typing'
+  color: '8D5494'
+  description: ''
+- name: 'GitHub Team: release-approvers'
+  color: '8D5494'
+  description: ''
+- name: 'GitHub Team: replay-backend'
+  color: '8D5494'
+  description: ''
+- name: 'GitHub Team: replay-frontend'
+  color: '8D5494'
+  description: ''
+- name: 'GitHub Team: revenue'
+  color: '8D5494'
+  description: ''
+- name: 'GitHub Team: security'
+  color: '8D5494'
+  description: ''
+- name: 'GitHub Team: streaming-platform'
+  color: '8D5494'
+  description: ''
+- name: 'GitHub Team: taskbroker'
+  color: '8D5494'
+  description: ''
+- name: 'GitHub Team: team-web-sdk-backend'
+  color: '8D5494'
+  description: ''
+- name: 'GitHub Team: team-web-sdk-frontend'
+  color: '8D5494'
+  description: ''
+- name: 'GitHub Team: telemetry-experience'
+  color: '8D5494'
+  description: ''
+- name: 'GitHub Team: visibility'
+  color: '8D5494'
+  description: ''
