--- a/pyproject.toml
+++ b/pyproject.toml
@@ -206,9 +206,11 @@ module = [
     "sentry.dynamic_sampling.rules.combinators.*",
     "sentry.dynamic_sampling.rules.helpers.*",
     "sentry.dynamic_sampling.tasks.helpers.*",
+    "sentry.eventstore.base",
     "sentry.eventstore.processing.*",
     "sentry.eventstore.reprocessing.*",
     "sentry.eventstore.reprocessing.redis",
+    "sentry.eventstore.snuba.backend",
     "sentry.eventstream.*",
     "sentry.eventtypes.error",
     "sentry.feedback.migrations.*",
@@ -470,6 +472,7 @@ module = [
     "tests.sentry.deletions.tasks.test_groups",
     "tests.sentry.deletions.test_group",
     "tests.sentry.event_manager.test_event_manager",
+    "tests.sentry.eventstore.snuba.test_backend",
     "tests.sentry.grouping.seer_similarity.test_get_seer_similar_issues",
     "tests.sentry.grouping.seer_similarity.test_seer",
     "tests.sentry.grouping.seer_similarity.test_seer_eligibility",
