--- a/pyproject.toml
+++ b/pyproject.toml
@@ -473,12 +473,7 @@ module = [
     "tests.sentry.deletions.test_group",
     "tests.sentry.event_manager.test_event_manager",
     "tests.sentry.eventstore.snuba.test_backend",
-    "tests.sentry.grouping.seer_similarity.test_get_seer_similar_issues",
-    "tests.sentry.grouping.seer_similarity.test_seer",
-    "tests.sentry.grouping.seer_similarity.test_seer_eligibility",
-    "tests.sentry.grouping.test_fingerprinting",
-    "tests.sentry.grouping.test_hashing",
-    "tests.sentry.grouping.test_parameterization",
+    "tests.sentry.grouping.*",
     "tests.sentry.hybridcloud.*",
     "tests.sentry.incidents.serializers.*",
     "tests.sentry.integrations.msteams.webhook.*",
